--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -1,10 +1,16 @@
 //Barra de navegación
 nav {
   width: 100%;
-  height: 100px;
+  padding: 20px 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background-color: rgba(255, 255, 255, 0.30);
+  backdrop-filter: blur(15px);
 
   .cont-logo {
     width: 300px;
@@ -13,7 +19,7 @@ nav {
     justify-content: start;
 
     img {
-      width: 200px;
+      width: 160px;
     }
   }
 
@@ -29,12 +35,15 @@ nav {
       a {
         text-decoration: none;
         font-size: $mediano;
-        font-weight: $negrita;
+        font-weight: $bold;
         color: $color-negro;
 
-        &:hover,
-        &.active {
+        &:hover {
           color: $color-calipso;
+        }
+
+        &.active {
+          color: $color-rosado;
         }
       }
     }
@@ -55,7 +64,7 @@ nav {
       flex-direction: column;
       cursor: pointer;
     }
-    
+
     .line {
       width: 30px;
       height: 3px;
