--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,3 +5,5 @@
 @import "./partials/navbar";
 @import "./partials/ofertas";
 @import "./partials/productos";
+@import "./partials/modal";
+@import "./partials/footer"
