--- a/scss/partials/_productos.scss
+++ b/scss/partials/_productos.scss
@@ -1,5 +1,66 @@
 .cont-productos {
-  background-color: $color-fondo;
   width: 100%;
-  height: 1000px;
+  display: flex;
+  justify-content: center;
+  
+  .cont-productos-card {
+    width: 1200px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 10px;
+    @include margin-b;
+    gap: 30px;
+  }
+
+  .productos-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: $color-blanco;
+    padding: 30px;
+    margin-bottom: 30px;
+    border-radius: $radius-l;
+    filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.2));;
+
+    img {
+      height: 400px;
+    }
+
+    .productos-card-texto {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      h2 {
+        margin-top: 10px;
+        font-size: $grande;
+        font-weight: $extra-bold;
+        text-transform: uppercase;
+        text-align: center;
+      }
+
+      p {
+        width: 300px;
+        text-align: center;
+      }
+
+      button {
+        @include btn-mas-info;
+      }
+    }
+    
+    .productos-card-btn button {
+      @include btn-mas-info;
+    }
+  }
+}
+
+.contenedor-construccion {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-size: 100px;
+  font-weight: $extra-bold;
 }
