--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -23,7 +23,7 @@ $bold: 700;
 $extra-bold: 900;
 
 //Variables de Radius
-$raius-s: 5px;
+$radius-s: 5px;
 $radius-m: 7px;
 $radius-l: 10px;
 $radius-xl: 20px;
