--- a/scss/partials/_mixin.scss
+++ b/scss/partials/_mixin.scss
@@ -11,6 +11,26 @@
   margin-bottom: 100px;
 }
 
+@mixin btn-link {
+  border: none;
+  border-radius: $radius-l;
+  background-color: $color-calipso;
+  padding: 10px 15px;
+  transition: all 0.3s ease-in-out;
+
+  &:hover {
+    transform: scale(1.03);
+    filter: drop-shadow(0px 0px 5px #0000004d);
+  }
+
+  & {
+    text-decoration: none;
+    font-size: $normal;
+    font-weight: $bold;
+    color: $color-negro;
+  }
+}
+
 @mixin btn-mas-info {
   border: none;
   border-radius: $radius-l;
@@ -23,10 +43,20 @@
     filter: drop-shadow(0px 0px 5px #0000004d);
   }
 
-  a {
+  & {
     text-decoration: none;
     font-size: $normal;
     font-weight: $bold;
     color: $color-negro;
+  }
+}
+
+@mixin hover {
+  &:hover {
+    color: $color-calipso;
+  }
+
+  &.active {
+    color: $color-rosado;
   }
 }
