--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -26,10 +26,13 @@ nav {
   .cont-menu {
     display: flex;
     justify-content: center;
+    align-items: center;
 
     .menu {
       list-style: none;
       display: flex;
+      padding: 0;
+      margin: 0;
       gap: 30px;
 
       a {
@@ -55,8 +58,9 @@ nav {
     display: flex;
     justify-content: end;
 
-    img {
-      width: 50px;
+    .bi {
+      font-size: 40px;
+      color: $color-negro;
     }
 
     .menu-burguer {
