--- a/scss/partials/_ofertas.scss
+++ b/scss/partials/_ofertas.scss
@@ -56,8 +56,8 @@
         }
       }
 
-      button {
-        @include btn-mas-info
+      a {
+        @include btn-link;
       }
     }
   }
@@ -73,9 +73,8 @@
   .cont-prod-oferta {
     width: 100%;
     display: flex;
-    justify-content: space-around;
-    padding-left: 400px;
-    padding-right: 400px;
+    justify-content: center;
+    gap: 30px;
 
     .cont-prod-img {
       display: flex;
@@ -102,8 +101,8 @@
           text-transform: uppercase;
         }
 
-        button {
-          @include btn-mas-info;
+        a {
+          @include btn-link;
         }
       }
     }
