--- a/scss/partials/_modal.scss
+++ b/scss/partials/_modal.scss
@@ -5,7 +5,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #000000b0;
+  background-color: #00000090;
+  backdrop-filter: blur(15px);
   justify-content: center;
   align-items: center;
 
@@ -13,20 +14,29 @@
     background-color: $color-blanco;
     padding: 20px;
     border-radius: $radius-l;
-    width: 300px;
-    max-height: 400px;
+    width: 500px;
+    max-height: 600px;
     overflow-y: auto;
 
-    span {
-      cursor: pointer;
-      font-size: 45px;
-      position: absolute;
-      top: 10px;
-      right: 20px;
-      color: $color-blanco;
+    .cont-cerrar-carrito {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      span {
+        cursor: pointer;
+        font-size: 45px;
+        color: $color-rosado;
+        padding-bottom: 4px;
+      }
+
+      h2 {
+        font-weight: $bold;
+      }
     }
 
     ul {
+      margin-top: 20px;
       list-style: none;
       padding: 0;
 
@@ -37,11 +47,11 @@
     }
 
     p {
-      margin-top: 15px;
       font-weight: $extra-bold;
     }
 
     button {
+      margin-top: 40px;
       @include btn-mas-info;
     }
   }
@@ -54,7 +64,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #000000b0;
+  background-color: #00000090;
+  backdrop-filter: blur(15px);
   justify-content: center;
   align-items: center;
 
@@ -63,10 +74,16 @@
     padding: 20px;
     border-radius: $radius-l;
     text-align: center;
-    width: 300px;
+    width: 500px;
 
     h2 {
+      font-weight: $bold;
       margin-bottom: 15px;
+      text-wrap: balance
+    }
+
+    p {
+      text-wrap: balance;
     }
 
     button {
