--- a/scss/partials/_productos.scss
+++ b/scss/partials/_productos.scss
@@ -21,7 +21,7 @@
     padding: 30px;
     margin-bottom: 30px;
     border-radius: $radius-l;
-    filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.2));;
+    filter: drop-shadow(0px 0px 10px #00000033);;
 
     img {
       height: 400px;
@@ -33,11 +33,13 @@
       align-items: center;
 
       h2 {
+        width: 300px;
         margin-top: 10px;
         font-size: $grande;
         font-weight: $extra-bold;
         text-transform: uppercase;
         text-align: center;
+        text-wrap: balance;
       }
 
       p {
