--- a/scss/partials/_productos.scss
+++ b/scss/partials/_productos.scss
@@ -25,12 +25,15 @@
 
     img {
       height: 400px;
+      width: 100%;
+      object-fit: cover;
     }
 
     .productos-card-texto {
       display: flex;
       flex-direction: column;
       align-items: center;
+      flex-grow: 1;
 
       h2 {
         width: 300px;
@@ -45,6 +48,7 @@
       p {
         width: 300px;
         text-align: center;
+        margin-top: auto;
       }
 
       button {
@@ -52,8 +56,12 @@
       }
     }
     
-    .productos-card-btn button {
-      @include btn-mas-info;
+    .productos-card-btn {
+      margin-top: auto;
+      
+      button {
+        @include btn-mas-info;
+      }
     }
   }
 }
