Consumo de API ok - manejo errores, notificaciones ok

--- a/scss/partials/_modal.scss
+++ b/scss/partials/_modal.scss
@@ -180,72 +180,6 @@
   }
 }
 
-.modal-agregado-carrito {
-  display: none;
-  position: fixed;
-  top: 15%;
-  right: -5%;
-  transform: translate(-50%, -50%);
-  z-index: 1;
-  opacity: 1;
-  transition: opacity 0.5s;
-
-  .modal-contenido-carrito {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 300px;
-    height: 80px;
-    background-color: $color-negro;
-    border-radius: $radius-s;
-
-    i {
-      font-size: 40px;
-      color: $color-calipso;
-      margin-top: 5px;
-      margin-right: 15px;
-    }
-
-    p {
-      margin-top: 15px;
-      color: $color-calipso;
-      font-weight: $extra-bold;
-      text-wrap: balance;
-    }
-  }
-}
-
-.modal-suscripcion {
-  display: none;
-  position: fixed;
-  top: 15%;
-  right: -5%;
-  transform: translate(-50%, -50%);
-  z-index: 1;
-  opacity: 1;
-  transition: opacity 0.5s;
-
-  .modal-contenido {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 300px;
-    height: 80px;
-    background-color: $color-negro;
-    border-radius: $radius-s;
-
-    i {
-      font-size: 40px;
-      color: $color-calipso;
-      margin-top: 5px;
-      margin-right: 15px;
-    }
-
-    p {
-      margin-top: 15px;
-      color: $color-calipso;
-      font-weight: $extra-bold;
-      text-wrap: balance;
-    }
-  }
+.icono-sweet {
+  font-size: 10px;
 }
