--- a/css/main.css
+++ b/css/main.css
@@ -63,14 +63,26 @@ nav .cont-carrito {
   display: flex;
   justify-content: end;
 }
+nav .cont-carrito a {
+  position: relative;
+  text-decoration: none;
+}
 nav .cont-carrito a .bi {
   font-size: 50px;
   color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 nav .cont-carrito a .contador-carrito {
   position: absolute;
-  top: 45px;
-  right: 98px;
+  top: 12px;
+  right: 14px;
+  display: flex;
+  width: 20px;
+  height: 20px;
+  justify-content: center;
+  align-items: center;
   color: #ffffff;
   font-weight: 900;
 }
@@ -476,68 +488,8 @@ nav .cont-carrito .line {
   color: #000000;
 }
 
-.modal-agregado-carrito {
-  display: none;
-  position: fixed;
-  top: 15%;
-  right: -5%;
-  transform: translate(-50%, -50%);
-  z-index: 1;
-  opacity: 1;
-  transition: opacity 0.5s;
-}
-.modal-agregado-carrito .modal-contenido-carrito {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 300px;
-  height: 80px;
-  background-color: #000000;
-  border-radius: 5px;
-}
-.modal-agregado-carrito .modal-contenido-carrito i {
-  font-size: 40px;
-  color: #41D9D9;
-  margin-top: 5px;
-  margin-right: 15px;
-}
-.modal-agregado-carrito .modal-contenido-carrito p {
-  margin-top: 15px;
-  color: #41D9D9;
-  font-weight: 900;
-  text-wrap: balance;
-}
-
-.modal-suscripcion {
-  display: none;
-  position: fixed;
-  top: 15%;
-  right: -5%;
-  transform: translate(-50%, -50%);
-  z-index: 1;
-  opacity: 1;
-  transition: opacity 0.5s;
-}
-.modal-suscripcion .modal-contenido {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 300px;
-  height: 80px;
-  background-color: #000000;
-  border-radius: 5px;
-}
-.modal-suscripcion .modal-contenido i {
-  font-size: 40px;
-  color: #41D9D9;
-  margin-top: 5px;
-  margin-right: 15px;
-}
-.modal-suscripcion .modal-contenido p {
-  margin-top: 15px;
-  color: #41D9D9;
-  font-weight: 900;
-  text-wrap: balance;
+.icono-sweet {
+  font-size: 10px;
 }
 
 .cont-footer {
